--- a/package.json
+++ b/package.json
@@ -10,8 +10,34 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.3",
+    "@astrojs/react": "^4.1.2",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.1.3"
+    "@astrojs/tailwind": "^5.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@sentry/astro": "^8.48.0",
+    "@spotlightjs/astro": "^2.3.0",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
+    "astro": "^5.1.3",
+    "input-otp": "^1.4.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "reading-time": "^1.5.0",
+    "rehype-external-links": "^3.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-smartypants": "^2.0.0",
+    "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
