--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.3",
-    "@astrojs/react": "^4.1.2",
+    "@astrojs/mdx": "^4.1.0",
+    "@astrojs/netlify": "^6.2.2",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/tailwind": "^6.0.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@sentry/astro": "^8.48.0",
-    "@spotlightjs/astro": "^2.3.0",
+    "@sentry/astro": "^9.3.0",
+    "@spotlightjs/astro": "^3.0.0",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
-    "astro": "^5.1.3",
+    "astro": "^5.4.1",
     "input-otp": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
