--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# astro cache
+.astro/cache/
+
+# astro build output
+.astro/build/
+
+.netlify/
