Configuration TypeScript et environnement de développement
- Mise à jour de la configuration TypeScript avec des options strictes
- Ajout de chemins d'importation personnalisés pour les composants et ressources
- Intégration de nouvelles dépendances de développement : Prettier, Astro Shield
- Configuration de l'environnement avec des variables publiques et secrètes
- Mise à jour des dépendances et du verrouillage des packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,27 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
+  "include": [".astro/types.d.ts", "src/**/*"],
+  "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "strictNullChecks": true,
+    "allowJs": true,
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@layouts/*": ["./src/layouts/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@utils/*": ["./src/utils/*"]
+    },
+    "verbatimModuleSyntax": true,
+    "moduleResolution": "bundler",
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "allowImportingTsExtensions": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "types": ["astro/client"]
   }
 }
