--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.1.0",
-    "@astrojs/netlify": "^6.2.2",
-    "@astrojs/react": "^4.2.1",
+    "@astrojs/mdx": "^4.2.3",
+    "@astrojs/netlify": "^6.2.5",
+    "@astrojs/react": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@sentry/astro": "^9.3.0",
+    "@sentry/astro": "^9.11.0",
+    "@sentry/opentelemetry": "^9.11.0",
     "@spotlightjs/astro": "^3.0.0",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
-    "astro": "^5.4.1",
+    "astro": "^5.6.0",
     "input-otp": "^1.4.2",
     "motion": "^12.4.7",
     "react": "^19.0.0",
